--- a/Fullstack/frontend/index.html
+++ b/Fullstack/frontend/index.html
@@ -25,7 +25,7 @@
     </table>
 
     
-    <input type="text" id="naam"><button type="button" onclick="naamOpslaan()">Opslaan</button>
+    <span>Nieuw persoon:</span><input type="text" id="naam"><button type="button" onclick="naamOpslaan()">Opslaan</button>
 
     <table>
         <thead>
@@ -41,10 +41,10 @@
         </tbody>
     </table>
 
-    <input type="text" id="straat">
-    <input type="number" id="nummer">
-    <input type="text" id="postcode">
-    <input type="text" id="stad">
+    <span>Straat: </span><input type="text" id="straat">
+    <span>Nummer: </span><input type="number" id="nummer">
+    <span>Postcode: </span><input type="text" id="postcode">
+    <span>Stad: </span><input type="text" id="stad">
 
     <button type="button" onclick="adresOpslaan()">Opslaan</button>
 
